Fix readability of suggested-action (aka "default") buttons

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -677,7 +677,7 @@ button {
       }
 
       &:disabled {
-        @include button(insensitive);
+        @include button(insensitive, $b_color, white);
 
         &:active,
         &:checked { @include button(insensitive-active, $b_color, white); }
@@ -1425,6 +1425,7 @@ headerbar {
 
       &.suggested-action {
         @include button(normal);
+        color: $selected_fg_color;
 
         border-color: $selected_borders_color;
 
@@ -1442,6 +1443,8 @@ headerbar {
 
         &:disabled {
           @include button(insensitive);
+          background-image: none;
+          background: $bg_color;
 
           border-color: $selected_borders_color;
         }
